--- a/BeautySalonApp/BeautySalonApp.csproj
+++ b/BeautySalonApp/BeautySalonApp.csproj
@@ -56,6 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddOrUpdateClientsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddOrUpdateClientsForm.Designer.cs">
+      <DependentUpon>AddOrUpdateClientsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="BeautySalonMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,9 @@
     </Compile>
     <Compile Include="BeautySalonProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddOrUpdateClientsForm.resx">
+      <DependentUpon>AddOrUpdateClientsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BeautySalonMainForm.resx">
       <DependentUpon>BeautySalonMainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +84,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -107,6 +117,18 @@
       <Project>{f7b44d6d-563a-4d6d-9718-b554924b4d97}</Project>
       <Name>EFControllerUtilities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BeautySalon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BeautySalon1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BeautySalon11.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BeautySalon12.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
