--- a/BeautySalonApp/BeautySalonApp.csproj
+++ b/BeautySalonApp/BeautySalonApp.csproj
@@ -69,12 +69,21 @@
       <DependentUpon>BeautySalonMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="BeautySalonProgram.cs" />
+    <Compile Include="DeleteAppointmentsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeleteAppointmentsForm.Designer.cs">
+      <DependentUpon>DeleteAppointmentsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AddOrUpdateClientsForm.resx">
       <DependentUpon>AddOrUpdateClientsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BeautySalonMainForm.resx">
       <DependentUpon>BeautySalonMainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DeleteAppointmentsForm.resx">
+      <DependentUpon>DeleteAppointmentsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
