--- a/BeautySalonCodeFirstFromDB/BeautySalonCodeFirstFromDB.csproj
+++ b/BeautySalonCodeFirstFromDB/BeautySalonCodeFirstFromDB.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Appointment.cs" />
+    <Compile Include="SalesView.cs" />
+    <Compile Include="PaymentsView.cs" />
     <Compile Include="AppointmentsView.cs" />
     <Compile Include="BeautySalonEntities.cs" />
     <Compile Include="Client.cs" />
